--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ROCK PAPER SCISSOR</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <p>Rock Paper Scissor</p>
@@ -25,6 +26,6 @@
   ">ResetButton</button>
 
 
-  <script src = "game.js"></script>
+  <script src = "script.js"></script>
 </body>
 </html>
